# GhostWire-secure-mesh-communication

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLEANUP_SUMMARY.md  CODE_OF_CONDUCT.md  COMPLETE_FRONTEND_FUNCTIONALITY.md  CONTRIBUTING.md  CROSS_PC_GUIDE.md  DEPLOYMENT.md  Dockerfile  FINAL_WORKING_SOLUTION.md  README.md  SECURITY.md  SETUP_SUMMARY.md  START_HERE.md  TESTING_GUIDE.md  WORKFLOWS_AND_TOOLS_README.md  build-backend.sh  deploy.sh  docker-compose.yml  ghostwire-proxy.sh  launch-ghostwire-working.sh
.github/workflows/: main.yml  security.yml  testing.yml
archive/: README.md
archive/docs/: DYNAMIC_FEATURES.md  FINAL_SUMMARY.md  LAUNCHERS.md
archive/scripts/: launch-ghostwire-complete.sh  launch-ghostwire-dynamic.sh  launch-ghostwire-final.sh  launch-ghostwire.bat  launch-ghostwire.ps1  launch-ghostwire.sh  start-ghostwire-complete.sh
docs/presentations/: 00_cover_toc_index.md  01_project_overview.md  02_getting_started.md  03_architecture.md  04_transports.md  05_security.md  06_adapters.md  07_faq.md  08_contributing.md  09_deployment_operations.md  10_advanced_security.md  11_performance_scaling.md  12_developer_guide.md  13_case_studies.md  14_glossary_reference.md
docs/wiki/: adapters.md  architecture.md  contributing.md  faq.md  getting-started.md  index.md  security.md  transports.md
ghostwire/: Cargo.toml  build-optimized.sh  build.rs  config.toml  ghostwire.toml.example  install.sh  start-backend.sh
ghostwire/docs/: GHOSTWIRE_MANUAL.md
ghostwire/src/: config.rs  main.rs  web.rs
ghostwire/src/cli/: mod.rs
ghostwire/src/core/: mesh.rs  message.rs  mod.rs  reticulum.rs  security.rs  stealth_tcp.rs  transport.rs
ghostwire/src/tui/: app.rs  chat.rs  config.rs  logs.rs  mod.rs  network.rs  ui.rs
monitoring/: health-check.sh
scripts/: enterprise_security_monitor.sh  quick_start.sh  run_comprehensive_tests.py  safety_firewall.sh
systemd/: ghostwire.service  install-service.sh
webui/: package-lock.json  package.json
webui/src/: App.css  App.tsx
webui/src/components/: ChatArea.tsx  ChatSidebar.tsx  CommunicationPanel.tsx  ControlPanel.tsx  FeatureGrid.tsx  HeroSection.tsx  MessageInput.tsx  NetworkPanel.tsx  RoadmapTimeline.tsx  SecurityPanel.tsx  StatusBar.tsx  SystemPanel.tsx  TestimonialCarousel.tsx  UserProfile.tsx
webui/src/pages/: Community.tsx  Docs.tsx  Features.tsx  Home.tsx  Outreach.tsx  Roadmap.tsx
webui/src/services/: api.ts  api.ts.bak  enhancedApi.ts  realApi.ts
